feat(llvm): implement comparison and conditional jump IR generation
- Add visitCompare method to handle IR comparison instructions
- Implement visitConditionalJump for conditional branching
- Add visitGoto for unconditional jumps
- Update function and block iteration to use const references
- Map IR basic blocks to LLVM basic blocks during function visit
- Clear block mapping after function processing
- Link lg_llvm_ir_generator_cpp with lg instead of lg_cpp_binding

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ target_link_libraries(lg_llvm_ir_generator_cpp PRIVATE
         clang-cpp
         LLVM
 )
-target_link_libraries(lg_llvm_ir_generator_cpp PRIVATE lg_cpp_binding)
+target_link_libraries(lg_llvm_ir_generator_cpp PRIVATE lg)
 
 if (WIN32)
     target_compile_definitions(llvm_ir_generator PRIVATE _WINDLL _MBCS)
