refactor(llvm): 重构 LLVM IR 生成器以支持局部变量和外部函数
- 更新子模块引用从 lg_cpp_binding 到 lg-cpp
- 修改 CMakeLists.txt 使用新的子模块路径
- 在函数参数和局部变量访问中添加类型检查
- 实现局部变量分配和初始化逻辑
- 添加对局部变量引用的处理方法
- 支持外部函数声明和定义
- 修复浮点常量创建时的类型获取方式
- 更新头文件包含路径和相关依赖
- 在主函数中增加测试用例验证新功能

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,9 @@ find_package(antlr4-runtime REQUIRED)
 set(llvm_components core irreader support analysis passes codegen target mc object linker option)
 llvm_map_components_to_libnames(llvm_libs ${llvm_components})
 
-include_directories(${ANTLR4_INCLUDE_DIR} lg_cpp_binding/include/ include/)
+include_directories(${ANTLR4_INCLUDE_DIR} lg-cpp/include/ include/)
 
-add_subdirectory(lg_cpp_binding)
+add_subdirectory(lg-cpp)
 
 add_executable(lg_llvm_ir_generator_cpp
         src/main.cpp
