--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lg_cpp_binding"]
-	path = lg_cpp_binding
-	url = https://github.com/xiaoli-white/lg_cpp_binding
+[submodule "lg-cpp"]
+	path = lg-cpp
+	url = https://github.com/xiaoli-white/lg-cpp
